--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
 name = "rumigen"
 uuid = "8c3994ea-dc96-4bc7-9897-f66023858c77"
 authors = ["Xijiang Yu <xijiang@users.noreply.github.com>"]
-version = "0.1.2"
+version = "0.1.3"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
