--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Xijiang Yu <xijiang@users.noreply.github.com>"]
 version = "0.1.3"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
