--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "rumigen"
 uuid = "8c3994ea-dc96-4bc7-9897-f66023858c77"
 authors = ["Xijiang Yu <xijiang@users.noreply.github.com>"]
-version = "0.2.3-3"
+version = "0.2.3-4"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
@@ -15,5 +15,6 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Term = "22787eb5-b846-44ae-b979-8e399b8463ab"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
