--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "rumigen"
 uuid = "8c3994ea-dc96-4bc7-9897-f66023858c77"
 authors = ["Xijiang Yu <xijiang@users.noreply.github.com>"]
-version = "0.5.0-2"
+version = "0.5.0-3"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
@@ -11,6 +11,7 @@ Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 Octavian = "6fd5a793-0b7e-452c-907f-f8bfe9c57db4"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
